# windows_local_service

./: .gitignore  CMakeLists.txt  README.md  compile_manifest.cmd  main.cpp  manifest.man  register_log.cmd  register_service.cmd  unregister_log.cmd  unregister_service.cmd
